--- a/src/libs/i18n/locales/en.json
+++ b/src/libs/i18n/locales/en.json
@@ -16,6 +16,14 @@
       "action": "Action"
     }
   },
+  "layout":{
+    "homePage":{
+      "footer":"Kloud Realty, Inc."
+    },
+    "vertical":{
+      "footer":"Kloud Realty, Inc."
+    }
+  },
   "UI Elements": "UI Elements",
   "Forms & Tables": "Forms & Tables",
   "Pages": "Pages",
