--- a/src/libs/i18n/locales/en.json
+++ b/src/libs/i18n/locales/en.json
@@ -201,7 +201,7 @@
   "AI (O)": "AI (O)",
   "Education": "Education",
   "Organization": "Organization",
-  "Franchise (O)": "Franchise (O)",
+  "Franchise": "Franchise",
   "PlansManagement": "PlansManagement",
   "Teams": "Teams",
   "Users": "Users",
